style.css
/* ... */
.slider-text {
	margin-top: 15rem;
}

.slider-text h1 {
	font-size: 4.375rem;
	color: #fff;
	text-shadow: 2px 2px #950904;
	margin-bottom: 0px;
}

.slider-text p {
	font-size: 1rem;
	width: 75%;
	line-height: 24px;
	margin: 0px auto;
}

@media only screen and (min-width: 701px) and (max-width: 1298px){
	.slider-text h1 {
		font-size: 2rem;
	}
	.slider-text {
		margin-top: 18rem;
	}
	.slider-text p {
		font-size: 1rem;
		width: 90%;
		line-height: 29px;
		margin: 6px auto;
	}
}

@media only screen and (max-width: 700px){

	.slider-leftarrow {
		margin-top: 28rem;
		margin-left: 3rem;
	}
	.slider-rightarrow {
		margin-top: 28rem;
		margin-right: 3rem;
	}
	.slider-text {
		margin-top: 45rem;
	}
	.slider-text h1 {
		font-size: 3rem;
	}
	.slider-text p {
		font-size: 1.6rem;
		width: 85%;
		margin: 10px auto;
		line-height: 15px;
	}
}

/* features section */
.features_container {
	display: flex;
	justify-content: space-between;
	width: 70%;
	margin: auto;
	height: 6.313rem;
	margin-bottom: 3rem;
}

.features_flex {
	display: flex;
	align-items: center;
}

.features_flex-img {
	height: auto;
	width: 3.125rem;
}

.features_flex-info {
	display: flex;
	flex-direction: column;
	margin-left: 1rem;
}

.features_flex-info h2 {
	font-size: 1.25rem;
	text-align: left;
	margin: 0px;
	text-shadow: 2px 2px #fff;
	color: var(--secondarycolor);
}

.features_flex-info h2:hover {
	color: #222;
}

.features_flex-info p {
	font-size: 0.813rem;
	color: #333;
	line-height: 19.5px;
	width: 12rem;
	text-align: left;
	margin: 0px;
}

@media only screen and (min-width: 701px) and (max-width: 1298px){
	.features_container {
		display: flex;
		justify-content: space-between;
		width: 80%;
		margin: auto;
		height: 6.313rem;
		margin-bottom: 3rem;
	}
	.features_flex-info p {
		line-height: 16px;
		width: 8rem;
	}
	.features_flex-info {
		display: flex;
		flex-direction: column;
		margin-left: 1rem;
		margin-right: 4rem;
	}
}

@media only screen and (max-width: 700px){
	.features_container {
		display: flex;
		flex-direction: column;
		justify-content: space-evenly;
		align-items: center;
		width: 70%;
		margin: auto;
		height: 30rem;
		margin-bottom: 3rem;
	}

	.features_flex-info p {
		font-size: 1.2rem;
		color: #333;
		line-height: 19.5px;
		width: 100%;
		text-align: left;
		margin: 0px;
	}
}

/* image gallery home page */
.grid_container {
	margin: auto;
	display: grid;
	grid-gap: 1.5rem;
	width: 70%;
}

.grid_container-item {
	display: inline-block;
	text-align: center;
	width: 100%;
}

.grid_container-columns-3 {
	grid-template-columns: repeat(3, 1fr);
}

.grid_container-img {
	border-radius: 10px;
	max-width: 350px;
	height: 230px;
}

.image_gallery-text {
	width: 70%;
	height: 4rem;
	margin: auto;
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.line-break {
	width: 70%;
	background-color: var(--textcolor);
	margin: 1rem auto 1rem auto;
}

.image_gallery-texthead {
	font-size: 2.813rem;
	color: var(--textcolor);
	font-weight: 300;
	text-shadow: 2px 2px #fff;
}

.image_gallery-btn {
	padding: 10px;
	border-radius: 3px;
	background-color: #222;
	color: white;
	font-size: 1rem;
	text-align: center;
}

@media only screen and (min-width: 701px) and (max-width: 1298px){
	.image_gallery-text {
		width: 70%;
		height: 8rem;
		margin: auto;
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: flex-start;
	}
	.image_gallery-btn {
		padding: 7px;
		margin-top: -1rem;
		border-radius: 3px;
		background-color: #222;
		color: white;
		font-size: 1rem;
		text-align: center;
	}
	.image_gallery-texthead {
		font-size: 1.813rem;
		margin-bottom: 1.3rem;
	}
}

@media only screen and (max-width: 700px){
	html {
		font-size: 7px;
	}
	.grid_container {
		margin: auto;
		display: grid;
		width: 70%;
	}
	.image_gallery-text {
		width: 70%;
		height: 8rem;
		margin: auto;
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: flex-start;
	}
	.image_gallery-btn {
		padding: 7px;
		margin-top: -1rem;
		border-radius: 3px;
		background-color: #222;
		color: white;
		font-size: 1rem;
		text-align: center;
	}
	.image_gallery-texthead {
		font-size: 1.813rem;
		margin-bottom: 1.3rem;
	}
	.grid_container-columns-3 {
		grid-template-columns: repeat(2, 1fr);
	}
	.grid_container-img {
		max-width: 200px;
		height: 100px;
	}
}

/* footer */
.custom-footer {
	width: 70%;
	margin: 3rem auto;
	display: flex;
}

.footer_title {
	margin: 0px;
	font-size: 1.563rem;
	font-weight: 400;
	color: var(--textcolor);
	text-shadow: 2px #fff;
}

.footer_info {
	width: 60%;
}

.footer_info p,
.custom-footer-contact p {
	width: 80%;
	font-size: 0.875rem;
	color: var(--textcolor);
	line-height: 21px;
	margin-bottom: 0px;
}

.custom-footer-contact {
	margin-left: -6rem;
}

.footer_info a,
.custom-footer-contact a {
	color: var(--secondarycolor);
	text-decoration: none;
	margin: 0px;
	font-weight: normal;
}

.footer_info a:hover {
	text-decoration: underline;
}

@media only screen and (min-width: 701px) and (max-width: 1298px){
	.custom-footer-contact {
		margin-left: 1rem;
	}

}

@media only screen and (max-width: 700px){
	.custom-footer {
		width: 70%;
		margin: 3rem auto;
		display: flex;
		flex-direction:column;
	}

	.footer_title {
		margin: 0px;
		font-size: 1.563rem;
		font-weight: 400;
		color: var(--textcolor);
		text-shadow: 2px #fff;
	}

	.footer_info {
		width: 100%;
	}

	.footer_info p,
	.custom-footer-contact p {
		width: 100%;
		font-size: 1.2rem;
		color: var(--textcolor);
		line-height: 15px;
		margin-bottom: 0px;
	}

	.custom-footer-contact {
		margin-top: 2rem;
		margin-left: 0rem;
	}
}

/* blog page */
.blog-custom {
	width: 70%;
	margin: auto;
	display: grid;
	grid-template-columns: 620px 1fr;
}

.blog-sidebar {
	justify-self: center;
	margin-left: -1.5rem;
}

.blog-custom-title {
	font-size: 2.813rem;
	font-weight: 300;
	text-shadow: 2px #fff;
	margin-top: 0;
	margin-bottom: 0.5rem;
}
/* ... */

